# Declaring an explicit [workspace] keeps this crate isolated from the root
# OpalZero workspace.  It must be compiled separately for the wasm32-wasip1 target:
#
#   cd opalzero-professionals/feedback
#   cargo build --target wasm32-wasip1 --release
#   cp target/wasm32-wasip1/release/opalzero-feedback.wasm \
#      ../../opalzero-core/professionals/feedback.wasm
[workspace]

[package]
name = "opalzero-feedback"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
